@startuml
'skinparam linetype ortho
'skinparam linetype polyline
hide empty members

skinparam ranksep 25


class GuiView {
    - GUI gui
    - LanguageHandler languageHandler
    + int promptChoiceLanguageHandlerMessage, Message)
    + void showMessage(Message)
    + void update(Player[], Field[], DiceCup)
}


package language {
    class LanguageHandler {
        - EnumMap<Message.Type, String> languageMap
        + String getMessage(Message)
    }
}

package controller {
    interface BasicUserIO {
        ~ int promptChoice(Message, Message...)
        ~ void showMessage(Message)
    }

    class UserIO {
        ~ BasicUserIO basicUserIO
        + boolean promptYesOrNo(Message)
        + boolean promptBuyField(String, String)
        ~ int promptChoice(Message, Message)
        ~ void showMessage(Message)
    }
    class GameController {
        - View view
        - GameBoard gameBoard
        - UserIO userIO
        + void playGame()
    }
}
'GuiView .up.|> BasicUserIO
'GuiView *-- LangController
'UserIO .down.|> BasicUserIO
'GameController *-right- UserIO

'LangController *.left. Message

'Message +-- Type


GuiView o-- LanguageHandler
LanguageHandler o-- language.Message
UserIO o-right- GuiView
GuiView .right[norank].|> BasicUserIO



GameController o-- UserIO
UserIO ..|> BasicUserIO
@enduml
